[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/projectiles/projectiles.png" type="Texture" id=1]
[ext_resource path="res://src/Projectiles/BossCavoon.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.08276

[node name="Cavoon" type="Area2D" groups=["EnemyProjectile"]]
collision_layer = 8
collision_mask = 25
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.345991, 0.345991 )
texture = ExtResource( 1 )
hframes = 13
vframes = 6
frame = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.879518, 1 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ChasingTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ChasingLifetime" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Cavoon_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ChasingTimer" to="." method="_on_ChasingTimer_timeout"]
[connection signal="timeout" from="ChasingLifetime" to="." method="_on_ChasingLifetime_timeout"]
